Fixed button spacing in navbar

--- a/_sass/port-theme/_base.scss
+++ b/_sass/port-theme/_base.scss
@@ -143,7 +143,8 @@ a.btn {
     }
 }
 
-.scroll-up, .scroll-down {
+.scroll-up,
+.scroll-down {
     cursor: pointer;
     position: absolute;
     padding: 2px;
@@ -169,12 +170,10 @@ a.btn {
         position: absolute;
         left: 18%;
         top: 15%;
-        font-family: FontAwesome;
-        // top: 3px;
+        font-family: FontAwesome; // top: 3px;
         font-size: 25px;
         font-weight: normal;
     }
-    
 }
 
 .scroll-down {
@@ -190,7 +189,10 @@ a.btn {
         top: 2%;
     }
     &.nav-bar {
-        top: 25%;
+        top: 19%;
+        @media (max-width: 700px) {
+            top: 27%;
+        }
     }
 }
 
